--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1125,0
-Size=155,450
+Pos=912,0
+Size=368,405
 Collapsed=0
 DockId=0x00000005,0
 
@@ -14,14 +14,14 @@ Size=1264,761
 Collapsed=0
 
 [Window][Viewport]
-Pos=455,0
-Size=668,450
+Pos=422,0
+Size=488,405
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=453,450
+Size=420,405
 Collapsed=0
 DockId=0x00000009,0
 
@@ -42,14 +42,14 @@ Size=472,61
 Collapsed=0
 
 [Window][Content Browser]
-Pos=350,452
-Size=930,268
+Pos=308,407
+Size=972,313
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Properties]
-Pos=0,452
-Size=348,268
+Pos=0,407
+Size=306,313
 Collapsed=0
 DockId=0x00000003,0
 
@@ -81,6 +81,16 @@ Collapsed=0
 [Window][Example: Property editor]
 Pos=222,379
 Size=430,450
+Collapsed=0
+
+[Window][Delete?]
+Pos=484,307
+Size=311,105
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=435,274
+Size=409,172
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -165,15 +175,15 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=367,330 Size=1280,720 Split=Y
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,747 Split=X
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1123,720 Split=X
-      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=453,720 Split=Y Selected=0x29EABFBD
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=328,211 Size=1280,720 Split=Y
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,405 Split=X
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=910,720 Split=X
+      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=420,720 Split=Y Selected=0x29EABFBD
         DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=189,374 Selected=0x29EABFBD
         DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=189,371 Selected=0xE1FDE0B9
-      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=668,720 CentralNode=1 Selected=0x13926F0B
-    DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=155,720 Selected=0xE87781F4
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,268 Split=X Selected=0xBF096F38
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=523,358 Selected=0x199AB496
-    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=1395,358 Selected=0xBF096F38
+      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=488,720 CentralNode=1 Selected=0x13926F0B
+    DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=368,720 Selected=0xE87781F4
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,313 Split=X Selected=0xBF096F38
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=340,358 Selected=0x199AB496
+    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=1082,358 Selected=0xBF096F38
 
