--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -83,6 +83,12 @@ Pos=222,379
 Size=430,450
 Collapsed=0
 
+[Window][Example: Console]
+Pos=0,17
+Size=32,15
+Collapsed=0
+DockId=0x0000000D,0
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -165,15 +171,17 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=32,32 Split=Y
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,747 Split=X
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1123,720 Split=X
-      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=453,720 Split=Y Selected=0x29EABFBD
-        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=189,374 Selected=0x29EABFBD
-        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=189,371 Selected=0xE1FDE0B9
-      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=668,720 CentralNode=1 Selected=0x13926F0B
-    DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=155,720 Selected=0xE87781F4
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,268 Split=X Selected=0xBF096F38
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=523,358 Selected=0x199AB496
-    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=1395,358 Selected=0xBF096F38
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=32,32 Split=Y
+  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=1280,459 Split=Y
+    DockNode        ID=0x00000001 Parent=0x0000000B SizeRef=1280,262 Split=X
+      DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1076,720 Split=X
+        DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=177,720 Split=Y Selected=0x29EABFBD
+          DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=189,374 Selected=0x29EABFBD
+          DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=189,371 Selected=0xE1FDE0B9
+        DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=897,720 CentralNode=1 Selected=0x13926F0B
+      DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=202,720 Selected=0xE87781F4
+    DockNode        ID=0x00000002 Parent=0x0000000B SizeRef=1280,195 Split=X Selected=0x199AB496
+      DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=204,218 Selected=0x199AB496
+      DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=1074,218 Selected=0xBF096F38
+  DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1280,259 Selected=0xDE6E0C33
 
