--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -69,10 +69,10 @@ Size=339,180
 Collapsed=0
 
 [Window][Example: Log]
-ViewportPos=633,585
-ViewportId=0xBF126D42
-Size=500,400
+Pos=310,384
+Size=970,336
 Collapsed=0
+DockId=0x00000006,1
 
 [Window][Example: Simple layout]
 Pos=60,60
