--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=17,0
-Size=15,15
+Size=15,6
 Collapsed=0
 DockId=0x00000005,0
 
@@ -15,13 +15,13 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=9,0
-Size=6,15
+Size=2,6
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000003,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=7,15
+Size=7,6
 Collapsed=0
 DockId=0x00000009,0
 
@@ -42,16 +42,16 @@ Size=472,61
 Collapsed=0
 
 [Window][Content Browser]
-Pos=17,17
-Size=15,15
+Pos=0,8
+Size=32,7
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000002,0
 
 [Window][Properties]
-Pos=0,17
-Size=15,15
+Pos=13,0
+Size=2,6
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000006,0
 
 [Window][Example: Auto-resizing window]
 Pos=328,226
@@ -82,6 +82,17 @@ Collapsed=0
 Pos=222,379
 Size=430,450
 Collapsed=0
+
+[Window][Example: Console]
+Pos=118,221
+Size=567,352
+Collapsed=0
+
+[Window][Console Output]
+Pos=0,17
+Size=32,15
+Collapsed=0
+DockId=0x0000000E,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -165,15 +176,17 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=32,32 Split=Y
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,747 Split=X
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1123,720 Split=X
-      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=453,720 Split=Y Selected=0x29EABFBD
-        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=189,374 Selected=0x29EABFBD
-        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=189,371 Selected=0xE1FDE0B9
-      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=668,720 CentralNode=1 Selected=0x13926F0B
-    DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=155,720 Selected=0xE87781F4
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,268 Split=X Selected=0xBF096F38
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=523,358 Selected=0x199AB496
-    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=1395,358 Selected=0xBF096F38
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=32,32 Split=Y
+  DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1280,594 Split=Y
+    DockNode        ID=0x00000001 Parent=0x0000000D SizeRef=1280,439 Split=X
+      DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1102,720 Split=X
+        DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=199,720 Split=Y Selected=0x29EABFBD
+          DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=189,374 Selected=0x29EABFBD
+          DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=189,371 Selected=0xE1FDE0B9
+        DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=901,720 Split=X Selected=0x13926F0B
+          DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=785,403 CentralNode=1 Selected=0x13926F0B
+          DockNode  ID=0x00000006 Parent=0x00000008 SizeRef=114,403 Selected=0x199AB496
+      DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=176,720 HiddenTabBar=1 Selected=0xE87781F4
+    DockNode        ID=0x00000002 Parent=0x0000000D SizeRef=1280,153 Selected=0xBF096F38
+  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=1280,124 Selected=0x1A309617
 
