--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=17,0
-Size=15,6
+Pos=1104,0
+Size=176,720
 Collapsed=0
 DockId=0x00000005,0
 
@@ -14,14 +14,14 @@ Size=1264,761
 Collapsed=0
 
 [Window][Viewport]
-Pos=9,0
-Size=2,6
+Pos=0,0
+Size=1280,720
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Hierarchy]
-Pos=0,0
-Size=7,6
+Pos=-328,-211
+Size=32,35
 Collapsed=0
 DockId=0x00000009,0
 
@@ -33,7 +33,7 @@ DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=46,32
+Size=1280,720
 Collapsed=0
 
 [Window][Title bar Hovered/Active tests]
@@ -42,14 +42,14 @@ Size=472,61
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,8
-Size=32,7
+Pos=0,567
+Size=1280,153
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties]
-Pos=13,0
-Size=2,6
+Pos=1166,0
+Size=114,720
 Collapsed=0
 DockId=0x00000006,0
 
@@ -89,8 +89,8 @@ Size=567,352
 Collapsed=0
 
 [Window][Console Output]
-Pos=0,17
-Size=32,15
+Pos=0,596
+Size=1280,124
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -176,7 +176,7 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=32,32 Split=Y
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=328,211 Size=1280,720 Split=Y
   DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1280,594 Split=Y
     DockNode        ID=0x00000001 Parent=0x0000000D SizeRef=1280,439 Split=X
       DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1102,720 Split=X
