--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=943,0
-Size=337,344
+Size=337,288
 Collapsed=0
 DockId=0x00000005,0
 
@@ -15,13 +15,13 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=298,0
-Size=643,344
+Size=643,288
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=296,344
+Size=296,288
 Collapsed=0
 DockId=0x00000003,0
 
@@ -42,14 +42,14 @@ Size=472,61
 Collapsed=0
 
 [Window][Content Browser]
-Pos=246,346
-Size=1034,374
+Pos=378,290
+Size=902,430
 Collapsed=0
-DockId=0x0000000C,1
+DockId=0x0000000C,0
 
 [Window][Properties]
-Pos=0,346
-Size=244,374
+Pos=0,290
+Size=376,430
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -85,7 +85,7 @@ Size=430,450
 Collapsed=0
 
 [Window][Delete?]
-Pos=484,307
+Pos=787,448
 Size=311,105
 Collapsed=0
 
@@ -105,10 +105,15 @@ Size=339,324
 Collapsed=0
 
 [Window][Console Output]
-Pos=246,346
-Size=1034,374
+ViewportPos=-1579,308
+ViewportId=0xD4FE2567
+Size=1543,430
 Collapsed=0
-DockId=0x0000000C,0
+
+[Window][RemoveResource]
+Pos=450,274
+Size=311,105
+Collapsed=0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -209,7 +214,7 @@ Column 2  Weight=1.0000
 
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=328,211 Size=1280,720 Split=Y
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,344 Split=X
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,288 Split=X
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=941,720 Split=X
       DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=453,720 Split=Y Selected=0x29EABFBD
         DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=189,374 Selected=0x29EABFBD
@@ -218,7 +223,7 @@ DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=328,211 Size=1280,720 Spli
         DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=296,344 Selected=0x29EABFBD
         DockNode  ID=0x00000006 Parent=0x00000008 SizeRef=643,344 CentralNode=1 Selected=0x13926F0B
     DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=337,720 Selected=0xE87781F4
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,374 Split=X Selected=0x199AB496
-    DockNode      ID=0x0000000B Parent=0x00000002 SizeRef=244,374 Selected=0x199AB496
-    DockNode      ID=0x0000000C Parent=0x00000002 SizeRef=1034,374 Selected=0xBF096F38
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,430 Split=X Selected=0x199AB496
+    DockNode      ID=0x0000000B Parent=0x00000002 SizeRef=376,374 Selected=0x199AB496
+    DockNode      ID=0x0000000C Parent=0x00000002 SizeRef=902,374 Selected=0xBF096F38
 
