--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -71,6 +71,7 @@
     <ClCompile Include="Engine\Systems\ResourceService.cpp" />
     <ClCompile Include="Engine\Systems\Rendering\HUD\HudConsoleSystem.cpp" />
     <ClCompile Include="Engine\Systems\ErrorLoggingSystem.cpp" />
+    <ClCompile Include="Engine\Systems\Rendering\RenderPipeline\EditorGridRenderSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
@@ -170,6 +171,7 @@
     <ClInclude Include="Engine\Tools\ComplexString.h" />
     <ClInclude Include="Engine\Systems\ErrorLoggingSystem.h" />
     <ClInclude Include="Matrix4x4.h" />
+    <ClInclude Include="Engine\Systems\Rendering\RenderPipeline\EditorGridRenderSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Engine\Assets\SkyBox\skybox_1.png" />
@@ -187,6 +189,7 @@
     <None Include="Engine\Assets\Shaders\ShadowPointLightGenerator.hlsl" />
     <None Include="Engine\Assets\Shaders\PBR_Functions.hlsli" />
     <None Include="Engine\Assets\Shaders\ToneMapping.hlsl" />
+    <None Include="Engine\Assets\Shaders\EditorGridShader.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Engine\Assets\SkyBox\skybox_1.png">
