--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=943,0
-Size=337,337
+Pos=17,0
+Size=15,15
 Collapsed=0
 DockId=0x00000005,0
 
@@ -14,14 +14,14 @@ Size=1264,761
 Collapsed=0
 
 [Window][Viewport]
-Pos=298,0
-Size=643,337
+Pos=9,0
+Size=6,15
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=296,337
+Size=7,15
 Collapsed=0
 DockId=0x00000003,0
 
@@ -33,7 +33,7 @@ DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1280,720
+Size=46,32
 Collapsed=0
 
 [Window][Title bar Hovered/Active tests]
@@ -42,14 +42,14 @@ Size=472,61
 Collapsed=0
 
 [Window][Content Browser]
-Pos=199,339
-Size=1081,381
+Pos=17,17
+Size=15,15
 Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Properties]
-Pos=0,339
-Size=197,381
+Pos=0,17
+Size=15,15
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -85,7 +85,7 @@ Size=430,450
 Collapsed=0
 
 [Window][Delete?]
-Pos=787,448
+Pos=804,456
 Size=311,105
 Collapsed=0
 
@@ -105,8 +105,8 @@ Size=339,324
 Collapsed=0
 
 [Window][Console Output]
-Pos=199,339
-Size=1081,381
+Pos=17,17
+Size=15,15
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -213,17 +213,17 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=328,211 Size=1280,720 Split=Y
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,337 Split=X
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=32,32 Split=Y
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,600 Split=X
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=941,720 Split=X
       DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=453,720 Split=Y Selected=0x29EABFBD
         DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=189,374 Selected=0x29EABFBD
         DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=189,371 Selected=0xE1FDE0B9
       DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=486,720 Split=X Selected=0x13926F0B
-        DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=296,344 Selected=0x29EABFBD
-        DockNode  ID=0x00000006 Parent=0x00000008 SizeRef=643,344 CentralNode=1 Selected=0x13926F0B
+        DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=368,344 Selected=0x29EABFBD
+        DockNode  ID=0x00000006 Parent=0x00000008 SizeRef=571,344 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
     DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=337,720 Selected=0xE87781F4
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,381 Split=X Selected=0x199AB496
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,415 Split=X Selected=0x199AB496
     DockNode      ID=0x0000000B Parent=0x00000002 SizeRef=296,374 Selected=0x199AB496
     DockNode      ID=0x0000000C Parent=0x00000002 SizeRef=1622,374 Selected=0xBF096F38
 
