--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=17,0
-Size=15,15
+Pos=790,0
+Size=490,386
 Collapsed=0
 DockId=0x00000005,0
 
@@ -14,14 +14,14 @@ Size=1264,761
 Collapsed=0
 
 [Window][Viewport]
-Pos=9,0
-Size=6,15
+Pos=201,0
+Size=587,386
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=7,8
+Size=199,231
 Collapsed=0
 DockId=0x00000003,0
 
@@ -33,7 +33,7 @@ DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=46,32
+Size=1280,720
 Collapsed=0
 
 [Window][Title bar Hovered/Active tests]
@@ -42,14 +42,14 @@ Size=472,61
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,17
-Size=32,15
+Pos=0,388
+Size=1280,332
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties]
-Pos=0,10
-Size=7,5
+Pos=0,233
+Size=199,153
 Collapsed=0
 DockId=0x00000006,0
 
@@ -89,8 +89,8 @@ Size=567,352
 Collapsed=0
 
 [Window][Console Output]
-Pos=0,17
-Size=32,15
+Pos=0,388
+Size=1280,332
 Collapsed=0
 DockId=0x00000002,1
 
@@ -176,7 +176,7 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=32,32 Split=Y
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=328,211 Size=1280,720 Split=Y
   DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,683 Split=X
     DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=788,720 Split=X
       DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=199,720 Split=Y Selected=0x29EABFBD
@@ -186,5 +186,5 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=32,32 Split=Y
         DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=189,371 Selected=0xE1FDE0B9
       DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=587,720 CentralNode=1 Selected=0x13926F0B
     DockNode        ID=0x00000005 Parent=0x00000001 SizeRef=490,720 HiddenTabBar=1 Selected=0xE87781F4
-  DockNode          ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,332 Selected=0xBF096F38
+  DockNode          ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,332 Selected=0x1A309617
 
