--- a/MonoLayer/MonoLayer.csproj
+++ b/MonoLayer/MonoLayer.csproj
@@ -44,17 +44,20 @@
         <Compile Include="Game\Comps\TimeData.cs" />
         <Compile Include="Game\Comps\TransformComp.cs" />
         <Compile Include="Game\Datas\SyVector3.cs" />
+        <Compile Include="Game\Helpers\HashHelper.cs" />
         <Compile Include="Game\SyEcs.cs" />
         <Compile Include="Game\SyEcsSync.cs" />
         <Compile Include="Game\SyEcsSystemBase.cs" />
         <Compile Include="Game\SyGameConfigBase.cs" />
-        <Compile Include="Game\SyGameInternalContext.cs" />
+        <Compile Include="Game\SyGameContext.cs" />
         <Compile Include="Game\SyProxyGame.cs" />
         <Compile Include="LeoEcs\components.cs" />
         <Compile Include="LeoEcs\entities.cs" />
         <Compile Include="LeoEcs\filters.cs" />
         <Compile Include="LeoEcs\systems.cs" />
         <Compile Include="LeoEcs\worlds.cs" />
+        <Compile Include="Logs\SyLog.cs" />
+        <Compile Include="Logs\SyProxyLogger.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
