--- a/TestGame/TestGame.csproj
+++ b/TestGame/TestGame.csproj
@@ -8,7 +8,7 @@
         <ProjectGuid>{0D644053-6D75-4591-B337-1DA12423F41D}</ProjectGuid>
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace></RootNamespace>
+        <RootNamespace>TestGame</RootNamespace>
         <AssemblyName>TestGame</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
@@ -42,6 +42,7 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ELogTag.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="SySetup.cs" />
         <Compile Include="TestSystem.cs" />
